--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jboe10.github.io/cuberto",
+  "homepage": "https://jboe10.github.io/Portfolio",
   "name": "cuberto",
   "version": "0.1.0",
   "private": true,
