--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "homepage": "https://jboe10.github.io/Portfolio",
   "name": "cuberto",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.14.4",
+    "node": "12.18.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
@@ -22,8 +25,6 @@
     "scrollmagic": "^2.0.7"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
